<resources>
    <string name="app_name">Truth or Dare</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main_menu">MainMenu</string>
    <string name="title_activity_dareview">dareview</string>
    <string name="truth_categories">Truth Categories</string>
    <string name="dare_categories">Dare Categories</string>
    <string name="truth_cat1">a</string>
    <string name="truth_cat2">b</string>
    <string name="truth_cat3">c</string>
    <string name="truth_cat4">d</string>
    <string name="truth_cat5">e</string>
    <string name="title_activity_dare_screen">DareScreen</string>
</resources>
