<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:id="@+id/editText"
        android:layout_weight="0.21"
        android:text="@string/truth_categories"
        android:autoText="false"
        android:linksClickable="false"
        android:layout_gravity="center_horizontal" />
    <RadioGroup
        android:id="@+id/radioSex"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/truth_cat5"
        android:id="@+id/radioButton"
        android:layout_weight="0.21"
        android:onClick="selectCat" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/truth_cat1"
            android:id="@+id/radioButton2"
            android:layout_weight="0.21"
            android:onClick="selectCat" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/truth_cat2"
            android:id="@+id/radioButton3"
            android:layout_weight="0.21"
            android:onClick="selectCat"/>

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/truth_cat3"
            android:id="@+id/radioButton4"
            android:layout_weight="0.21"
            android:onClick="selectCat"/>

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/truth_cat4"
            android:id="@+id/radioButton5"
            android:layout_weight="0.21"
            android:onClick="selectCat"/>

    </RadioGroup>


</LinearLayout>